# GTDCalendor

./: .gitignore  ChangeLog.md  GEMINI.md  ListandGDT.vue  Todo.md  how2build.md  readme.md
.cursor/skills/efficient-backlog/: SKILL.md
gtd-react-app/: DEPLOY.md  index.html  package-lock.json  package.json  server.mjs  vite.config.js
gtd-react-app/src/: App.tsx  index.css
gtd-react-app/src/components/: Inspector.tsx  ProjectItem.tsx  TaskCard.tsx
gtd-react-app/src/context/: GtdContext.tsx
gtd-react-app/src/hooks/: useGtdParser.ts
gtd-react-app/src/types/: gtd.ts
gtd-react-app/src/utils/: fileStorage.ts  syncApi.ts
gtd-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.js
gtd-tauri/src/: App.tsx  index.css  main.tsx
gtd-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gtd-tauri/src-tauri/capabilities/: default.json
gtd-tauri/src-tauri/icons/: icon.icns
gtd-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  store.rs
gtd-tauri/src/components/: Inspector.tsx  ProjectItem.tsx  TaskCard.tsx  TaskList.tsx
gtd-tauri/src/context/: GtdContext.tsx
gtd-tauri/src/hooks/: useGtdParser.ts
gtd-tauri/src/types/: gtd.ts
gtd-tauri/src/utils/: fileStorage.ts  tauriStorage.ts
gtd-vue-app/: index.html  package-lock.json  package.json
gtd-vue-app/src/: App.vue  style.css
gtd-vue-app/src/components/: ProjectItem.vue  TaskCard.vue
gtd-vue-app/src/utils/: fileStorage.js
如何使用 AI 进行软件开发/: Cursor Skills 编写技巧.md  如何在 GPT 或 Gemini 自己的 web 界面中以工和方式写代码  如何正确的结构化的描述一个软件.md  用Gemini实现 B:S 软件的 SOP
