[package]
name = "gtd-flow"
version = "0.2.0"
description = "GTD Flow - cross-platform task management (macOS, iOS, Android, Windows)"
authors = ["GTD Flow"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "gtd_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gtd-flow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
